# palantir-ontology-agents

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: agents.yaml  ontology_schema.yaml
config/prompts/: briefing_drafter.md  coordinator.md  graph_analyst.md  osint.md  threat_assessor.md
demo-video/: package-lock.json  package.json  tsconfig.json
demo-video/src/: Main.tsx  Root.tsx  theme.ts
demo-video/src/components/: BrowserChrome.tsx  Logos.tsx  Typewriter.tsx
demo-video/src/scenes/: Scene1Hook.tsx  Scene2Problem.tsx  Scene3Mechanism.tsx  Scene4EndUserDemo.tsx  Scene5CTA.tsx
src/: __init__.py  orchestrator.py
src/agents/: __init__.py  briefing_agent.py  graph_agent.py  osint_agent.py  threat_agent.py
src/graph/: __init__.py  nodes.py  state.py  workflow.py
src/ontology/: __init__.py  loader.py  schema.py  store.py
src/tools/: __init__.py  document_tools.py  ontology_tools.py  threat_tools.py  web_search.py
src/ui/: app.py
tests/: __init__.py  conftest.py  test_briefing_agent.py  test_graph_agent.py  test_ontology.py  test_orchestrator.py  test_osint_agent.py  test_threat_agent.py  test_workflow.py
